fixed mobile overflow problem

--- a/public_html/static/css/responsive.css
+++ b/public_html/static/css/responsive.css
@@ -6,6 +6,9 @@
     #tf-menu.navbar-default {
         background-color: rgba(0, 0, 0, 0.79);
     }
+    #tf-menu {
+        padding:10px;
+    }
     #tf-works li.pull-right, #tf-works li.pull-left {
         margin-top: 10px;
         float: none !important;
